fix overflow

--- a/packages/client/src/style.scss
+++ b/packages/client/src/style.scss
@@ -53,6 +53,7 @@ html {
 	text-size-adjust: 100%;
 	tab-size: 2;
 	scroll-padding: 60px;
+	overflow-x: clip;
 
 	&.useSystemFont {
 		font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
